20240730_update_graphrag_dockerfile
add env vars

--- a/graphrag/Dockerfile
+++ b/graphrag/Dockerfile
@@ -11,6 +11,9 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+ARG GOOGLE_APPLICATION_CREDENTIALS
+ENV GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
+
 RUN gsutil -m cp -r "gs://graphrag_dsa_jobs/artifacts" /app
 
 COPY . .
