--- a/graphrag/Dockerfile
+++ b/graphrag/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update && apt-get install -y curl python3-pip
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 ENV PATH="/root/.cargo/bin:${PATH}"
+ENV PORT 8012
 
 WORKDIR /app
 
