--- a/graphrag/Dockerfile
+++ b/graphrag/Dockerfile
@@ -1,14 +1,13 @@
 FROM python:3.11-slim
 
-RUN apt-get update && apt-get install -y curl python3-pip
+RUN apt-get update && apt-get install -y curl
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 ENV PATH="/root/.cargo/bin:${PATH}"
-ENV PORT 8012
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
